2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.15.0 ===

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_set_icon_sensitive): Fix default
	value

	* gtk/tests/builder.c: Clean up asserts, make domain
	test work with current GtkBuilder behaviour.

	* Makefile.decl: Start Xvfb with -ac -noreset to try
	and get the gui tests working.

2009-01-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols: Add a few forgotten symbols
	* gtk/gtkprintoperation.c:
	* gtk/gtktrayicon-x11.c: Make some functions static

2008-12-31  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-12-31  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkruler.[hc]: Some more

2008-12-31  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkpaned.[hc]:
	* gtk/gtkscale.[hc]:
	* gtk/gtkscrollbar.[hc]: 
	* gtk/gtkseparator.[hc]: Keep these all abstract for now.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Rename the icon signals to ::icon-press and
	::icon-release to avoid clashes with the existing SexyIconEntry
	signals. Also annotate the GdkEvent parameters as static-scope.

	* tests/testentryicons.c: Adapt
	* demos/gtk-demo/search-entry.c: Adapt
	
2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 565846 – "va_end(args);" should be added into gtk_tree_store_new

	* gtk/gtktreestore.c (gtk_tree_store_new): Add a missing
	va_end() call. Pointed out by Jiwon Lee.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Code cleanups; get rid of get_text_area_size,
	replace get_icon_allocation by get_icon_allocations, don't
	pass allocation to place_windows; other stylistic changes to 
	the icon-related code.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Avoid size allocation loops.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Fix errors in property definitions and